deploy/user/service-ldap.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freeipa-ldap
  labels:
    app: freeipa
spec:
  selector:
    app: freeipa
  ports:
    - name: ldap
      port: 389
      targetPort: ldap
      protocol: TCP
    - name: ldaps
      port: 636
      targetPort: ldaps
      protocol: TCP
